--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
+THis is the test to jenkins deployment files
 1) This the test for deployment from git to webservers using Jenkins.
 2) Testing Automatic build process in Jenkines.
 3) Testing the automated deployment process in webservers from Jenkines.
-4) Coping the code in muiltilpe webservers
 </html>
